# FoxBridgeAgent

./: BUILD.md  CMakeLists.txt  QUICK_START_WINDOWS.md  README.md  build-quick.ps1  build.ps1
.github/workflows/: build.yml
assets/: README.md
config/: CONFIG.md  config.json.example  config.json.template
docs/: API.md  ARCHITECTURE.md  AUTO_START.md  BUILD_INSTALLER.md  BUILD_ON_MAC.md  CLOUDFLARE_TUNNEL_SETUP.md  CURL_EXAMPLES.md  OPERATIONS.md  REQUIREMENTS.md  SECURITY.md
include/: CloudflareTunnel.h  Config.h  DatabaseManager.h  HttpServer.h  IndexMaintenance.h  WindowsService.h
installer/: FoxBridgeAgent.nsi  FoxBridgeAgent.wxs  INSTALLER.md  RequirementsChecker.cs
src/: CloudflareTunnel.cpp  DatabaseManager.cpp  HttpServer.cpp  IndexMaintenance.cpp  WindowsService.cpp  main.cpp
